<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
<LinearLayout 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/window_bg"
	android:orientation="vertical" >
	<TextView
		android:id="@+id/playerPageTitle"
		style="@style/text_name"
		/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		<LinearLayout
			android:background="@color/card_bg"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_margin="2dp"
			android:orientation="vertical" >
			
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/age_attr_layout">
				<TextView
				android:text="@string/age"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/age"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/value_attr_layout">
				<TextView
				android:text="@string/value"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/value"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/wage_attr_layout">
				<TextView
				android:text="@string/wage"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/wage"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/potential_attr_layout"
				>
				<TextView
				android:text="@string/potential"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/potential"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/condition_attr_layout">
				<TextView
				android:text="@string/condition"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/condition"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/rating_attr_layout">
				<TextView
				android:text="@string/rating"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/rating"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/skillLevel_attr_layout">
				<TextView
				android:text="@string/skillLevel"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/skillLevel"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:background="@color/card_bg"
			android:layout_margin="2dp"
			android:orientation="vertical" >
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/title_bg"
				android:id="@+id/defense_title_layout">
				<TextView
					android:text="@string/defense"
					style="@style/text_category_title"
					android:layout_centerInParent="true"
					/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/keep_attr_layout">
				<TextView
				android:text="@string/keep"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/keep"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/mark_attr_layout">
				<TextView
				android:text="@string/mark"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/mark"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/position_attr_layout">
				<TextView
				android:text="@string/position"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/position"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/head_attr_layout">
				<TextView
				android:text="@string/head"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/head"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/steal_attr_layout">
				<TextView
				android:text="@string/steal"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/steal"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		<LinearLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_margin="2dp"
			android:background="@color/card_bg"
			android:orientation="vertical" >
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/title_bg"
				android:id="@+id/offense_title_layout">
				<TextView
					android:text="@string/offense"
					style="@style/text_category_title"
					android:layout_centerInParent="true"
					/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/firstTouch_attr_layout">
				<TextView
				android:text="@string/firstTouch"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/firstTouch"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/pass_attr_layout">
				<TextView
				android:text="@string/pass"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/pass"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/dribble_attr_layout">
				<TextView
				android:text="@string/dribble"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/dribble"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/cross_attr_layout">
				<TextView
				android:text="@string/cross"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/cross"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/finish_attr_layout">
				<TextView
				android:text="@string/finish"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/finish"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:background="@color/card_bg"
			android:layout_margin="2dp"
			android:orientation="vertical" >
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/title_bg"
				android:id="@+id/physical_title_layout">
				<TextView
					android:text="@string/physical"
					style="@style/text_category_title"
					android:layout_centerInParent="true"
					/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/agility_attr_layout">
				<TextView
				android:text="@string/agility"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/agility"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/strength_attr_layout">
				<TextView
				android:text="@string/strength"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/strength"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/fitness_attr_layout">
				<TextView
				android:text="@string/fitness"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/fitness"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/speed_attr_layout">
				<TextView
				android:text="@string/speed"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/speed"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
			<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
				<TextView
				android:text="@string/creativity"
				style="@style/text_attr"
				android:layout_alignParentLeft="true"
				/>
				<TextView
				android:id="@+id/creativity"
				style="@style/text_attr_value"
				android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:layout_marginTop="2dp"
		android:background="@color/title_bg"
		>
		<TextView
			android:text="@string/all_rates"
			style="@style/text_category_title"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/card_bg"
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:layout_marginBottom="2dp"
		>
		<TextView
			android:id="@+id/all_rates"
			style="@style/text_attr"
			/>
	</LinearLayout>
</LinearLayout>
</ScrollView>
